--- a/slides/03-recipes.html
+++ b/slides/03-recipes.html
@@ -42,12 +42,6 @@
 
 
 
-layout: true
-
-&lt;a class="footer-link" href="https://tmv.netlify.app/"&gt;https://tmv.netlify.app/&lt;/a&gt;
-
-
----
 
 class: title-slide, center, bottom
 
@@ -1051,7 +1045,7 @@ Write a recipe for the `Sale_Price ~ .` variables that:
 
 Save the result as `pca_rec`
 
-<div class="countdown" id="timer_5ea3003c" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5ea302d8" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1231,7 +1225,7 @@ class: your-turn
 
 Make a workflow that combines `pca_rec` and with `rt_spec`.
 
-<div class="countdown" id="timer_5ea2fe4e" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5ea301e0" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">01</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1328,7 +1322,7 @@ class: your-turn
 
 Try our pca workflow to predict sale price with the `ames_test` data. What is the RMSE?
 
-<div class="countdown" id="timer_5ea2fddd" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5ea3014e" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1391,7 +1385,7 @@ class: your-turn
 
 Run the first chunk. Then try our pca workflow on `ames_folds`. What is the RMSE?
 
-<div class="countdown" id="timer_5ea2fd50" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5ea30079" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1439,7 +1433,7 @@ class: your-turn
 
 Modify the code below to build a new pca recipe that uses `step_other` *first* to collapse infrequently occurring values of `Neighborhood` into an "other" category. Then update `pca_wf` to use the new recipe.
 
-<div class="countdown" id="timer_5ea3000d" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5ea302e0" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
