--- a/slides/03-recipes.html
+++ b/slides/03-recipes.html
@@ -85,20 +85,20 @@ ames_zsplit &lt;- ames %&gt;%
 
 
 ```
-&gt; # A tibble: 2,198 x 2
-&gt;    Sale_Price  z_price
-&gt;         &lt;int&gt;    &lt;dbl&gt;
-&gt;  1     105000 -0.949  
-&gt;  2     172000 -0.110  
-&gt;  3     244000  0.791  
-&gt;  4     213500  0.409  
-&gt;  5     191500  0.134  
-&gt;  6     236500  0.697  
-&gt;  7     189000  0.103  
-&gt;  8     175900 -0.0613 
-&gt;  9     185000  0.0526 
-&gt; 10     180400 -0.00496
-&gt; # … with 2,188 more rows
+# # A tibble: 2,198 x 2
+#    Sale_Price  z_price
+#         &lt;int&gt;    &lt;dbl&gt;
+#  1     105000 -0.949  
+#  2     172000 -0.110  
+#  3     244000  0.791  
+#  4     213500  0.409  
+#  5     191500  0.134  
+#  6     236500  0.697  
+#  7     189000  0.103  
+#  8     175900 -0.0613 
+#  9     185000  0.0526 
+# 10     180400 -0.00496
+# # … with 2,188 more rows
 ```
 
 ---
@@ -819,22 +819,22 @@ background-size: contain
 
 
 ```
-&gt; # A tibble: 732 x 81
-&gt;    MS_SubClass MS_Zoning Lot_Frontage Lot_Area Street Alley
-&gt;    &lt;fct&gt;       &lt;fct&gt;            &lt;dbl&gt;    &lt;dbl&gt; &lt;fct&gt;  &lt;fct&gt;
-&gt;  1 One_Story_… Resident…      2.48     3.00    Pave   No_A…
-&gt;  2 One_Story_… Resident…      0.663    0.217   Pave   No_A…
-&gt;  3 One_Story_… Resident…      1.05     0.153   Pave   No_A…
-&gt;  4 Two_Story_… Resident…      0.514   -0.00732 Pave   No_A…
-&gt;  5 Two_Story_… Resident…     -0.320    6.00    Pave   No_A…
-&gt;  6 One_Story_… Resident…      0.901    0.185   Pave   No_A…
-&gt;  7 One_Story_… Resident…      0.216   -0.221   Pave   No_A…
-&gt;  8 Two_Story_… Resident…     -1.09    -1.16    Pave   No_A…
-&gt;  9 Two_Story_… Resident…     -1.72    -0.304   Pave   No_A…
-&gt; 10 Two_Story_… Resident…      0.00782  0.927   Pave   No_A…
-&gt; # … with 722 more rows, and 75 more variables:
-&gt; #   Lot_Shape &lt;fct&gt;, Land_Contour &lt;fct&gt;, Utilities &lt;fct&gt;,
-&gt; #   Lot_Config &lt;fct&gt;, Land_Slope &lt;fct&gt;, …
+# # A tibble: 732 x 81
+#    MS_SubClass MS_Zoning Lot_Frontage Lot_Area Street Alley
+#    &lt;fct&gt;       &lt;fct&gt;            &lt;dbl&gt;    &lt;dbl&gt; &lt;fct&gt;  &lt;fct&gt;
+#  1 One_Story_… Resident…      2.48     3.00    Pave   No_A…
+#  2 One_Story_… Resident…      0.663    0.217   Pave   No_A…
+#  3 One_Story_… Resident…      1.05     0.153   Pave   No_A…
+#  4 Two_Story_… Resident…      0.514   -0.00732 Pave   No_A…
+#  5 Two_Story_… Resident…     -0.320    6.00    Pave   No_A…
+#  6 One_Story_… Resident…      0.901    0.185   Pave   No_A…
+#  7 One_Story_… Resident…      0.216   -0.221   Pave   No_A…
+#  8 Two_Story_… Resident…     -1.09    -1.16    Pave   No_A…
+#  9 Two_Story_… Resident…     -1.72    -0.304   Pave   No_A…
+# 10 Two_Story_… Resident…      0.00782  0.927   Pave   No_A…
+# # … with 722 more rows, and 75 more variables:
+# #   Lot_Shape &lt;fct&gt;, Land_Contour &lt;fct&gt;, Utilities &lt;fct&gt;,
+# #   Lot_Config &lt;fct&gt;, Land_Slope &lt;fct&gt;, …
 ```
 
 
@@ -894,15 +894,15 @@ lm(Sale_Price ~ Roof_Style, data = ames)
 
 
 ```
-&gt; # A tibble: 6 x 5
-&gt;   term              estimate std.error statistic  p.value
-&gt;   &lt;chr&gt;                &lt;dbl&gt;     &lt;dbl&gt;     &lt;dbl&gt;    &lt;dbl&gt;
-&gt; 1 (Intercept)        184799.    17167.    10.8   1.57e-26
-&gt; 2 Roof_StyleGable    -14487.    17240.    -0.840 4.01e- 1
-&gt; 3 Roof_StyleGambrel  -46514.    23719.    -1.96  5.00e- 2
-&gt; 4 Roof_StyleHip       41891.    17475.     2.40  1.66e- 2
-&gt; 5 Roof_StyleMansard  -18573.    28818.    -0.644 5.19e- 1
-&gt; 6 Roof_StyleShed       8401.    38386.     0.219 8.27e- 1
+# # A tibble: 6 x 5
+#   term              estimate std.error statistic  p.value
+#   &lt;chr&gt;                &lt;dbl&gt;     &lt;dbl&gt;     &lt;dbl&gt;    &lt;dbl&gt;
+# 1 (Intercept)        184799.    17167.    10.8   1.57e-26
+# 2 Roof_StyleGable    -14487.    17240.    -0.840 4.01e- 1
+# 3 Roof_StyleGambrel  -46514.    23719.    -1.96  5.00e- 2
+# 4 Roof_StyleHip       41891.    17475.     2.40  1.66e- 2
+# 5 Roof_StyleMansard  -18573.    28818.    -0.644 5.19e- 1
+# 6 Roof_StyleShed       8401.    38386.     0.219 8.27e- 1
 ```
 
 ---
@@ -1045,7 +1045,7 @@ Write a recipe for the `Sale_Price ~ .` variables that:
 
 Save the result as `pca_rec`
 
-<div class="countdown" id="timer_5ea302d8" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5ea30639" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1060,21 +1060,21 @@ pca_rec &lt;-
     step_normalize(all_predictors()) %&gt;%
     step_pca(all_predictors(), num_comp = 5)
 pca_rec
-&gt; Data Recipe
-&gt; 
-&gt; Inputs:
-&gt; 
-&gt;       role #variables
-&gt;    outcome          1
-&gt;  predictor         80
-&gt; 
-&gt; Operations:
-&gt; 
-&gt; Novel factor level assignment for all_nominal
-&gt; Dummy variables from all_nominal
-&gt; Zero variance filter on all_predictors
-&gt; Centering and scaling for all_predictors
-&gt; No PCA components were extracted.
+# Data Recipe
+# 
+# Inputs:
+# 
+#       role #variables
+#    outcome          1
+#  predictor         80
+# 
+# Operations:
+# 
+# Novel factor level assignment for all_nominal
+# Dummy variables from all_nominal
+# Zero variance filter on all_predictors
+# Centering and scaling for all_predictors
+# No PCA components were extracted.
 ```
 
 ---
@@ -1082,20 +1082,20 @@ pca_rec
 
 ```r
 summary(pca_rec)
-&gt; # A tibble: 81 x 4
-&gt;    variable     type    role      source  
-&gt;    &lt;chr&gt;        &lt;chr&gt;   &lt;chr&gt;     &lt;chr&gt;   
-&gt;  1 MS_SubClass  nominal predictor original
-&gt;  2 MS_Zoning    nominal predictor original
-&gt;  3 Lot_Frontage numeric predictor original
-&gt;  4 Lot_Area     numeric predictor original
-&gt;  5 Street       nominal predictor original
-&gt;  6 Alley        nominal predictor original
-&gt;  7 Lot_Shape    nominal predictor original
-&gt;  8 Land_Contour nominal predictor original
-&gt;  9 Utilities    nominal predictor original
-&gt; 10 Lot_Config   nominal predictor original
-&gt; # … with 71 more rows
+# # A tibble: 81 x 4
+#    variable     type    role      source  
+#    &lt;chr&gt;        &lt;chr&gt;   &lt;chr&gt;     &lt;chr&gt;   
+#  1 MS_SubClass  nominal predictor original
+#  2 MS_Zoning    nominal predictor original
+#  3 Lot_Frontage numeric predictor original
+#  4 Lot_Area     numeric predictor original
+#  5 Street       nominal predictor original
+#  6 Alley        nominal predictor original
+#  7 Lot_Shape    nominal predictor original
+#  8 Land_Contour nominal predictor original
+#  9 Utilities    nominal predictor original
+# 10 Lot_Config   nominal predictor original
+# # … with 71 more rows
 ```
 
 
@@ -1225,7 +1225,7 @@ class: your-turn
 
 Make a workflow that combines `pca_rec` and with `rt_spec`.
 
-<div class="countdown" id="timer_5ea301e0" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5ea3061a" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">01</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1238,23 +1238,23 @@ pca_wf &lt;-
   add_recipe(pca_rec) %&gt;% 
   add_model(rt_spec)
 pca_wf
-&gt; ══ Workflow ════════════════════════════════════════════════════════════════════════════════
-&gt; Preprocessor: Recipe
-&gt; Model: decision_tree()
-&gt; 
-&gt; ── Preprocessor ────────────────────────────────────────────────────────────────────────────
-&gt; 5 Recipe Steps
-&gt; 
-&gt; ● step_novel()
-&gt; ● step_dummy()
-&gt; ● step_zv()
-&gt; ● step_normalize()
-&gt; ● step_pca()
-&gt; 
-&gt; ── Model ───────────────────────────────────────────────────────────────────────────────────
-&gt; Decision Tree Model Specification (regression)
-&gt; 
-&gt; Computational engine: rpart
+# ══ Workflow ════════════════════════════════════════════════════════════════════════════════
+# Preprocessor: Recipe
+# Model: decision_tree()
+# 
+# ── Preprocessor ────────────────────────────────────────────────────────────────────────────
+# 5 Recipe Steps
+# 
+# ● step_novel()
+# ● step_dummy()
+# ● step_zv()
+# ● step_normalize()
+# ● step_pca()
+# 
+# ── Model ───────────────────────────────────────────────────────────────────────────────────
+# Decision Tree Model Specification (regression)
+# 
+# Computational engine: rpart
 ```
 
 
@@ -1322,7 +1322,7 @@ class: your-turn
 
 Try our pca workflow to predict sale price with the `ames_test` data. What is the RMSE?
 
-<div class="countdown" id="timer_5ea3014e" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5ea3061c" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1336,10 +1336,10 @@ pca_wf %&gt;%
   predict(ames_test) %&gt;% 
   mutate(truth = ames_test$Sale_Price) %&gt;% 
   rmse(truth, .pred)
-&gt; # A tibble: 1 x 3
-&gt;   .metric .estimator .estimate
-&gt;   &lt;chr&gt;   &lt;chr&gt;          &lt;dbl&gt;
-&gt; 1 rmse    standard      39181.
+# # A tibble: 1 x 3
+#   .metric .estimator .estimate
+#   &lt;chr&gt;   &lt;chr&gt;          &lt;dbl&gt;
+# 1 rmse    standard      39181.
 ```
 
 
@@ -1385,7 +1385,7 @@ class: your-turn
 
 Run the first chunk. Then try our pca workflow on `ames_folds`. What is the RMSE?
 
-<div class="countdown" id="timer_5ea30079" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5ea304c3" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1399,11 +1399,11 @@ ames_folds &lt;- vfold_cv(ames_train, strata = Sale_Price, breaks = 4)
 pca_wf %&gt;% 
   fit_resamples(resamples = ames_folds) %&gt;% 
   collect_metrics()
-&gt; # A tibble: 2 x 5
-&gt;   .metric .estimator      mean     n   std_err
-&gt;   &lt;chr&gt;   &lt;chr&gt;          &lt;dbl&gt; &lt;int&gt;     &lt;dbl&gt;
-&gt; 1 rmse    standard   39498.       10 1385.    
-&gt; 2 rsq     standard       0.753    10    0.0168
+# # A tibble: 2 x 5
+#   .metric .estimator      mean     n   std_err
+#   &lt;chr&gt;   &lt;chr&gt;          &lt;dbl&gt; &lt;int&gt;     &lt;dbl&gt;
+# 1 rmse    standard   39498.       10 1385.    
+# 2 rsq     standard       0.753    10    0.0168
 ```
 
 ---
@@ -1433,7 +1433,7 @@ class: your-turn
 
 Modify the code below to build a new pca recipe that uses `step_other` *first* to collapse infrequently occurring values of `Neighborhood` into an "other" category. Then update `pca_wf` to use the new recipe.
 
-<div class="countdown" id="timer_5ea302e0" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5ea3047d" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1456,11 +1456,11 @@ other_wf &lt;-
 other_wf %&gt;% 
   fit_resamples(resamples = ames_folds) %&gt;% 
   collect_metrics()
-&gt; # A tibble: 2 x 5
-&gt;   .metric .estimator      mean     n   std_err
-&gt;   &lt;chr&gt;   &lt;chr&gt;          &lt;dbl&gt; &lt;int&gt;     &lt;dbl&gt;
-&gt; 1 rmse    standard   39498.       10 1385.    
-&gt; 2 rsq     standard       0.753    10    0.0168
+# # A tibble: 2 x 5
+#   .metric .estimator      mean     n   std_err
+#   &lt;chr&gt;   &lt;chr&gt;          &lt;dbl&gt; &lt;int&gt;     &lt;dbl&gt;
+# 1 rmse    standard   39498.       10 1385.    
+# 2 rsq     standard       0.753    10    0.0168
 ```
 
 ---
