--- a/slides/03-recipes.html
+++ b/slides/03-recipes.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="" xml:lang="">
   <head>
-    <title>Preprocess Your Data</title>
+    <title>Build A Better Training Set</title>
     <meta charset="utf-8" />
     <meta name="author" content="Alison Hill" />
-    <meta name="date" content="2020-04-24" />
+    <meta name="date" content="2020-04-26" />
     <script src="libs/header-attrs/header-attrs.js"></script>
     <link href="libs/remark-css/default.css" rel="stylesheet" />
     <link href="libs/countdown/countdown.css" rel="stylesheet" />
@@ -45,7 +45,7 @@
 
 class: title-slide, center, bottom
 
-# Preprocess Your Data
+# Build A Better Training Set
 
 ## Tidymodels, Virtually &amp;mdash; Session 03
 
@@ -1045,7 +1045,7 @@ Write a recipe for the `Sale_Price ~ .` variables that:
 
 Save the result as `pca_rec`
 
-<div class="countdown" id="timer_5ea30639" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5ea65c5a" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1225,7 +1225,7 @@ class: your-turn
 
 Make a workflow that combines `pca_rec` and with `rt_spec`.
 
-<div class="countdown" id="timer_5ea3061a" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5ea65922" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">01</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1238,11 +1238,11 @@ pca_wf &lt;-
   add_recipe(pca_rec) %&gt;% 
   add_model(rt_spec)
 pca_wf
-# ══ Workflow ════════════════════════════════════════════════════════════════════════════════
+# ══ Workflow ══════════════════════════════════════════════════════════════════
 # Preprocessor: Recipe
 # Model: decision_tree()
 # 
-# ── Preprocessor ────────────────────────────────────────────────────────────────────────────
+# ── Preprocessor ──────────────────────────────────────────────────────────────
 # 5 Recipe Steps
 # 
 # ● step_novel()
@@ -1251,7 +1251,7 @@ pca_wf
 # ● step_normalize()
 # ● step_pca()
 # 
-# ── Model ───────────────────────────────────────────────────────────────────────────────────
+# ── Model ─────────────────────────────────────────────────────────────────────
 # Decision Tree Model Specification (regression)
 # 
 # Computational engine: rpart
@@ -1322,7 +1322,7 @@ class: your-turn
 
 Try our pca workflow to predict sale price with the `ames_test` data. What is the RMSE?
 
-<div class="countdown" id="timer_5ea3061c" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5ea6599f" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1385,7 +1385,7 @@ class: your-turn
 
 Run the first chunk. Then try our pca workflow on `ames_folds`. What is the RMSE?
 
-<div class="countdown" id="timer_5ea304c3" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5ea65aaf" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1433,7 +1433,7 @@ class: your-turn
 
 Modify the code below to build a new pca recipe that uses `step_other` *first* to collapse infrequently occurring values of `Neighborhood` into an "other" category. Then update `pca_wf` to use the new recipe.
 
-<div class="countdown" id="timer_5ea3047d" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5ea65bec" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
