--- a/slides/04-ensemble.html
+++ b/slides/04-ensemble.html
@@ -4,7 +4,7 @@
     <title>Ensemble Models</title>
     <meta charset="utf-8" />
     <meta name="author" content="Alison Hill" />
-    <meta name="date" content="2020-04-24" />
+    <meta name="date" content="2020-04-29" />
     <script src="libs/header-attrs/header-attrs.js"></script>
     <link href="libs/remark-css/default.css" rel="stylesheet" />
     <link href="libs/countdown/countdown.css" rel="stylesheet" />
@@ -314,7 +314,7 @@ class: your-turn
 
 Fill in the blanks to return the accuracy and ROC AUC for this model using 10-fold cross-validation.
 
-<div class="countdown" id="timer_5ea30a99" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5eaa0173" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">02</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -625,7 +625,7 @@ Compare the metrics of the big tree to the vanilla tree- which one predicts the 
 
 *Hint: you'll need https://tidymodels.github.io/parsnip/reference/decision_tree.html*
 
-<div class="countdown" id="timer_5ea30e04" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5ea9ff9e" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -687,7 +687,7 @@ class: middle
 get_tree_fit(big_tree)
 # parsnip model object
 # 
-# Fit time:  58ms 
+# Fit time:  54ms 
 # n= 864 
 # 
 # node), split, n, loss, yval, (yprob)
@@ -1241,7 +1241,7 @@ Let's combine bootstrapping with decision trees.
 
 Do **Round 1** on your handouts.
 
-<div class="countdown" id="timer_5ea30e5d" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5ea9ff17" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1269,7 +1269,7 @@ Now, let's add the aggregating part.
 Do **Round 2** on your handouts.
 
 
-<div class="countdown" id="timer_5ea30de3" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5ea9fef8" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1342,7 +1342,7 @@ Compare the metrics of the random forest to your two single tree models (vanilla
 
 *Hint: you'll need https://tidymodels.github.io/parsnip/articles/articles/Models.html*
 
-<div class="countdown" id="timer_5ea30b07" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5eaa0151" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1426,7 +1426,7 @@ Challenge: Make 4 more random forest model specs, each using 4, 8, 12, and 19 va
 
 *Hint: you'll need https://tidymodels.github.io/parsnip/reference/rand_forest.html*
 
-<div class="countdown" id="timer_5ea30c93" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5ea9ff84" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">04</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1721,7 +1721,7 @@ get_tree_fit(imp_fit)
 get_tree_fit(imp_fit)
 # parsnip model object
 # 
-# Fit time:  308ms 
+# Fit time:  285ms 
 # Ranger result
 # 
 # Call:
@@ -1797,7 +1797,7 @@ class: your-turn
 
 Make a new model spec called `treebag_imp_spec` to fit a bagged classification tree model. Set the variable `importance` mode to "permutation". Plot the variable importance- which variable was the most important?
 
-<div class="countdown" id="timer_5ea30dfb" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5eaa0180" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1829,7 +1829,7 @@ imp_plot
 ```
 # parsnip model object
 # 
-# Fit time:  960ms 
+# Fit time:  930ms 
 # Ranger result
 # 
 # Call:
