--- a/slides/05-tune.html
+++ b/slides/05-tune.html
@@ -4,7 +4,7 @@
     <title>Tune Models</title>
     <meta charset="utf-8" />
     <meta name="author" content="Alison Hill" />
-    <meta name="date" content="2020-04-28" />
+    <meta name="date" content="2020-04-29" />
     <script src="libs/header-attrs/header-attrs.js"></script>
     <link href="libs/remark-css/default.css" rel="stylesheet" />
     <link href="libs/countdown/countdown.css" rel="stylesheet" />
@@ -295,7 +295,7 @@ Then use `tune_grid()` to find the best combination of hyper-parameters to maxim
 
 How does it compare to the average ROC AUC across folds from `fit_resamples()`?
 
-<div class="countdown" id="timer_5ea8cdcf" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5ea9fe74" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -463,12 +463,12 @@ Quickly visualize tuning results
 rf_results %&gt;% autoplot()
 ```
 
-&lt;img src="figs/04-ensemble/rf-plot-1.png" width="504" style="display: block; margin: auto;" /&gt;
+&lt;img src="figs/05-tune/rf-plot-1.png" width="504" style="display: block; margin: auto;" /&gt;
 
 ---
 class: middle, center
 
-&lt;img src="figs/04-ensemble/unnamed-chunk-18-1.png" width="504" style="display: block; margin: auto;" /&gt;
+&lt;img src="figs/05-tune/unnamed-chunk-18-1.png" width="504" style="display: block; margin: auto;" /&gt;
 
 ---
 
@@ -593,7 +593,7 @@ Use `select_best()`, `finalize_workflow()`, and `last_fit()` to take the best co
 
 How does our actual test ROC AUC compare to our cross-validated estimate?
 
-<div class="countdown" id="timer_5ea8ce4a" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5ea9fdbf" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -678,7 +678,7 @@ roc_values &lt;-
 autoplot(roc_values)
 ```
 
-&lt;img src="figs/04-ensemble/unnamed-chunk-28-1.png" width="504" style="display: block; margin: auto;" /&gt;
+&lt;img src="figs/05-tune/unnamed-chunk-28-1.png" width="504" style="display: block; margin: auto;" /&gt;
 
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
