--- a/slides/05-tune.html
+++ b/slides/05-tune.html
@@ -25,7 +25,7 @@ class: title-slide, center, bottom
 
 # Tune Models
 
-## Tidymodels, Virtually &amp;mdash; Session 04
+## Tidymodels, Virtually &amp;mdash; Session 05
 
 ### Alison Hill 
 
@@ -295,7 +295,7 @@ Then use `tune_grid()` to find the best combination of hyper-parameters to maxim
 
 How does it compare to the average ROC AUC across folds from `fit_resamples()`?
 
-<div class="countdown" id="timer_5ea9fe74" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5eaa023b" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -593,7 +593,7 @@ Use `select_best()`, `finalize_workflow()`, and `last_fit()` to take the best co
 
 How does our actual test ROC AUC compare to our cross-validated estimate?
 
-<div class="countdown" id="timer_5ea9fdbf" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5eaa0296" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
